Fixed issue with next button being out of view for larger devices. Adjusted margin on score

--- a/src/styles/QuizDetails.css
+++ b/src/styles/QuizDetails.css
@@ -56,7 +56,7 @@ button.next-question:active, button.next-question:hover {
     overflow: hidden;
   }
   div.quiz-details-wrapper h1.score {
-    margin: 4% 0;
+    margin: 1% 0;
   }
 
   div.button {
